--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header id="förstaNamn">   
+        <h1>Martin Kristensen</h1>
+    </header>
+
+<ul class="länkar">   
+   <li><a href="utbldning.html">Utbildning</a></li>
+   <li><a href="arbetslivserfarenhet.html">Arbetslivserfarenhet</a></li>
+   <li><a href="personligt.html">Personligt</a></li>
+   <li><a href="fritid.html">Fritid</a></li>
+   <li></li> <a href="kontakt.html">Kontakt</a></li>
+</ul>
+    <img id="bild" src="martin-kalmar.jpg" alt="Martin">
+
+    <footer class="information">Martin Kristensen <br>Stenholmavägen 417 <br>26453 Ljungbyhed <br> martinkristensen12@gmail.com <br> 0760-64 48 16</footer>
+
     
 </body>
+
 </html>
