--- a/utbldning.html
+++ b/utbldning.html
@@ -13,8 +13,11 @@
     <ul>
         <li>Handel och admministration, Gullstrand skolan, Landskrona</li>
         <li>Internationell ekonomi 180 hp, Högskolan Kristianstad, 2011-2014</li>
+        <li>Internationell ekonomi 40 hp, Ming Chuan University, Taipei, Taiwan, 2013</li>
         <li>Webbutvecklare 400, Jönköpings Universitet, 2022-2024</li>
     </ul>
+
+    <a href="https://github.com/Martin-kristens">Martins Github sida!</a>
     <footer class="information">Martin Kristensen <br>Stenholmavägen 417 <br>26453 Ljungbyhed <br> martinkristensen12@gmail.com <br> 0760-64 48 16</footer>
 </body>
 </html>
